Resolve canvas issue with overflowhidden and make pie chart look a bit better.

--- a/public/js/components/bar-chart/bar-chart.css
+++ b/public/js/components/bar-chart/bar-chart.css
@@ -7,7 +7,6 @@
   margin: 10px;
   background-color: white;
   border-radius: 6px;
-  overflow: hidden;
 }
 
 .bar-chart h3 {
