--- a/public/js/components/line-chart/line-chart.css
+++ b/public/js/components/line-chart/line-chart.css
@@ -7,7 +7,7 @@
   margin: 10px;
   background-color: white;
   border-radius: 6px;
-  overflow: hidden;
+  /*overflow: hidden;*/
 }
 
 .line-chart h3 {
